Fix sidebar social links and avatar distortion

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -143,22 +143,22 @@
 .author__avatar {
   display: table-cell;
   vertical-align: top;
-  width: 100%;
-  height: auto;
+  width: 36px;
+  height: 36px;
   // set width only, for non-square avatars
   // height: 36px;
 
   @include breakpoint($large) {
     display: block;
-    width: auto;
-    height: auto;
+    width: 175px;
+    height: 175px;
   }
 
   img {
-    max-width: 175px;
-    border-radius: 50%;
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
 
     @include breakpoint($large) {
       padding: 5px;
